<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:id="@+id/action_list"
        android:icon="@drawable/ic_list_black_24dp"
        android:title="@string/list_title"/>

    <item android:id="@+id/action_statistics"
        android:icon="@drawable/ic_assessment_black_24dp"
        android:title="@string/statistics_title"/>

</menu>