<resources>
    <string name="app_name">TO-DO MVP</string>

    <string name="add_task">New TO-DO</string>
    <string name="edit_task">Edit TO-DO</string>

    <string name="task_marked_complete">task marked complete</string>
    <string name="task_marked_active">Task marked active</string>

    <string name="load_tasks_error">Error while loading tasks</string>
    <string name="completed_tasks_cleared">Completed tasks cleared</string>

    <string name="menu_filter">Filter</string>
    <string name="menu_clear">Clear completed</string>
    <string name="menu_delete_task">Delete task</string>

    <string name="navigation_view_header_title">TO-DOs</string>

    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>

    <string name="empty_task_message">TO-DOs cannot be empty</string>

    <string name="successfully_saved_task_message">TO-DO saved</string>
    <string name="list_title">TO-DO List</string>

    <string name="statistics_title">Statistics</string>
    <string name="statistics_no_tasks">You have no tasks.</string>
    <string name="statistics_active_tasks">Active tasks:</string>
    <string name="statistics_completed_tasks">Completed tasks:</string>
    <string name="statistics_error">Error loading statistics.</string>

    <string name="no_data">No data</string>
    <string name="loading">LOADING</string>

    <string-array name="list_tasks_array">
        <item>@string/navigation_all</item>
        <item>@string/navigation_active</item>
        <item>@string/navigation_completed</item>
    </string-array>

    <string name="navigation_all">All</string>
    <string name="navigation_active">Active</string>
    <string name="navigation_completed">Completed</string>

    <string name="label_all">All TO-DOs</string>
    <string name="label_active">Active TO-DOs</string>
    <string name="label_completed">Completed TO-DOs</string>

    <string name="no_tasks_all">You have no TO-DOs!</string>
    <string name="no_tasks_active">You have no active TO-DOs!</string>
    <string name="no_tasks_completed">You have no completed TO-DOs!</string>
    <string name="no_tasks_add">Add a TO-DO item +</string>

    <string name="refresh">Refresh</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
